Fix Enable grade modification checkbox without past courses visible Requires some stylistic changes and CSS Fun(TM) @aopell feel free to take a closer look

--- a/css/grades.css
+++ b/css/grades.css
@@ -157,6 +157,12 @@ input#enable-modify {
     align-items: center;
 }
 
+.splus-gradeedit-checkbox-holder-wrapper > * {
+    display: inline-flex;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
 .grade-add-indicator.hidden,
 .report-row.item-row.hidden {
     display: none !important;
